Fix alignment on multi-line bullet list items.

--- a/web/app/themes/design102/assets/styles/common/_global.scss
+++ b/web/app/themes/design102/assets/styles/common/_global.scss
@@ -1,22 +1,3 @@
 body {
   padding-top: 60px;
 }
-
-.heading-centered {
-  text-align: center;
-}
-
-ul {
-  margin-left: 0.1em;
-  padding-left: 0;
-  list-style-position: inside;
-
-  ul {
-    margin-left: 1.5em;
-  }
-}
-
-ul.two-cols {
-  column-count: 2;
-  list-style-position: inside;
-}
