--- a/web/app/themes/design102/assets/styles/common/_type.scss
+++ b/web/app/themes/design102/assets/styles/common/_type.scss
@@ -1,3 +1,6 @@
+/**
+ * Headings
+ */
 h1, .h1 {
   margin-bottom: 0.5em;
 }
@@ -15,4 +18,22 @@ h5, .h5 {
 }
 h6, .h6 {
   margin-bottom: 0.5em;
+}
+
+.centered-text {
+  text-align: center;
+}
+
+/**
+ * Bullet lists
+ */
+ul {
+  margin-left: 1.2em;
+  padding-left: 0;
+}
+
+ul.two-cols {
+  margin-left: 0.2em;
+  column-count: 2;
+  list-style-position: inside;
 }
